src/parser/TSmmParser.java
// Generated from C:/Users/diego/IdeaProjects/DLP-Compiler/src/parser/TSmm.g4 by ANTLR 4.13.2
package parser;

import ast.Program;
import ast.definition.Definition;
import ast.definition.FunctionDefinition;
import ast.definition.VariableDefinition;
import ast.expression.*;
import ast.expression.binaryOperation.Arithmetic;
import ast.expression.binaryOperation.Comparison;
import ast.expression.binaryOperation.Logic;
import ast.expression.unaryOperation.UnaryMinus;
import ast.expression.unaryOperation.UnaryNot;
import ast.statement.*;
import ast.type.*;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.ArrayList;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class TSmmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, ID=41, INT_CONSTANT=42, CHAR_CONSTANT=43, REAL_CONSTANT=44, 
		TRASH=45;
	public static final int
		RULE_program = 0, RULE_variableDefinition = 1, RULE_functionDefinition = 2, 
		RULE_mainFunction = 3, RULE_type = 4, RULE_simpleType = 5, RULE_statement = 6, 
		RULE_body = 7, RULE_invocation = 8, RULE_expression = 9;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "variableDefinition", "functionDefinition", "mainFunction", 
			"type", "simpleType", "statement", "body", "invocation", "expression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'let'", "','", "':'", "';'", "'function'", "'('", "')'", "'void'", 
			"'{'", "'}'", "'main'", "'['", "']'", "'int'", "'number'", "'char'", 
			"'log'", "'input'", "'if'", "'else'", "'while'", "'do'", "'return'", 
			"'='", "'.'", "'as'", "'-'", "'!'", "'*'", "'/'", "'%'", "'+'", "'>'", 
			"'>='", "'<'", "'<='", "'!='", "'=='", "'&&'", "'||'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "ID", "INT_CONSTANT", "CHAR_CONSTANT", 
			"REAL_CONSTANT", "TRASH"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TSmm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TSmmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Program ast = new Program();
		public List<Definition> definitions = new ArrayList<Definition>();
		public VariableDefinitionContext vd;
		public FunctionDefinitionContext fd;
		public MainFunctionContext mainFunction;
		public MainFunctionContext mainFunction() {
			return getRuleContext(MainFunctionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(TSmmParser.EOF, 0); }
		public List<VariableDefinitionContext> variableDefinition() {
			return getRuleContexts(VariableDefinitionContext.class);
		}
		public VariableDefinitionContext variableDefinition(int i) {
			return getRuleContext(VariableDefinitionContext.class,i);
		}
		public List<FunctionDefinitionContext> functionDefinition() {
			return getRuleContexts(FunctionDefinitionContext.class);
		}
		public FunctionDefinitionContext functionDefinition(int i) {
			return getRuleContext(FunctionDefinitionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(26);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case T__0:
						{
						setState(20);
						((ProgramContext)_localctx).vd = variableDefinition();
						_localctx.definitions.addAll(((ProgramContext)_localctx).vd.ast); 
						}
						break;
					case T__4:
						{
						setState(23);
						((ProgramContext)_localctx).fd = functionDefinition();
						 _localctx.definitions.add(((ProgramContext)_localctx).fd.ast); 
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(30);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(31);
			((ProgramContext)_localctx).mainFunction = mainFunction();
			 _localctx.definitions.add(((ProgramContext)_localctx).mainFunction.ast); 
			setState(33);
			match(EOF);
			 _localctx.ast.addDefinitions(_localctx.definitions); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableDefinitionContext extends ParserRuleContext {
		public List<VariableDefinition> ast = new ArrayList<VariableDefinition>();
		public List<String> varNames = new ArrayList<String>();
		public Token FS;
		public Token ID1;
		public Token IDL;
		public TypeContext type;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(TSmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(TSmmParser.ID, i);
		}
		public VariableDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDefinition; }
	}

	public final VariableDefinitionContext variableDefinition() throws RecognitionException {
		VariableDefinitionContext _localctx = new VariableDefinitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_variableDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			((VariableDefinitionContext)_localctx).FS = match(T__0);
			setState(37);
			((VariableDefinitionContext)_localctx).ID1 = match(ID);
			 _localctx.varNames.add((((VariableDefinitionContext)_localctx).ID1!=null?((VariableDefinitionContext)_localctx).ID1.getText():null)); 
			setState(44);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(39);
				match(T__1);
				setState(40);
				((VariableDefinitionContext)_localctx).IDL = match(ID);
				 _localctx.varNames.add( (((VariableDefinitionContext)_localctx).IDL!=null?((VariableDefinitionContext)_localctx).IDL.getText():null)); 
				}
				}
				setState(46);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(47);
			match(T__2);
			setState(48);
			((VariableDefinitionContext)_localctx).type = type();
			setState(49);
			match(T__3);
			 for (String varName : _localctx.varNames) { _localctx.ast.add(new VariableDefinition(((VariableDefinitionContext)_localctx).FS.getLine(), ((VariableDefinitionContext)_localctx).FS.getCharPositionInLine()+1, varName, ((VariableDefinitionContext)_localctx).type.ast)); } 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDefinitionContext extends ParserRuleContext {
		public FunctionDefinition ast;
		public List<VariableDefinition> params = new ArrayList<VariableDefinition>();
		public List<Statement> funcBody = new ArrayList<Statement>();
		public Type returnType;
		public Token FS;
		public Token FUNCNAME;
		public Token ID1;
		public TypeContext t1;
		public Token IDL;
		public TypeContext tl;
		public TypeContext rType;
		public VariableDefinitionContext variableDefinition;
		public StatementContext statement;
		public List<TerminalNode> ID() { return getTokens(TSmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(TSmmParser.ID, i);
		}
		public List<VariableDefinitionContext> variableDefinition() {
			return getRuleContexts(VariableDefinitionContext.class);
		}
		public VariableDefinitionContext variableDefinition(int i) {
			return getRuleContext(VariableDefinitionContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public FunctionDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDefinition; }
	}

	public final FunctionDefinitionContext functionDefinition() throws RecognitionException {
		FunctionDefinitionContext _localctx = new FunctionDefinitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_functionDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			((FunctionDefinitionContext)_localctx).FS = match(T__4);
			setState(53);
			((FunctionDefinitionContext)_localctx).FUNCNAME = match(ID);
			setState(54);
			match(T__5);
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(55);
				((FunctionDefinitionContext)_localctx).ID1 = match(ID);
				setState(56);
				match(T__2);
				setState(57);
				((FunctionDefinitionContext)_localctx).t1 = type();
				 _localctx.params.add( new VariableDefinition(((FunctionDefinitionContext)_localctx).FS.getLine(), ((FunctionDefinitionContext)_localctx).FS.getCharPositionInLine()+1,(((FunctionDefinitionContext)_localctx).ID1!=null?((FunctionDefinitionContext)_localctx).ID1.getText():null), ((FunctionDefinitionContext)_localctx).t1.ast));
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__1) {
					{
					{
					setState(59);
					match(T__1);
					setState(60);
					((FunctionDefinitionContext)_localctx).IDL = match(ID);
					setState(61);
					match(T__2);
					setState(62);
					((FunctionDefinitionContext)_localctx).tl = type();
					 _localctx.params.add( new VariableDefinition(((FunctionDefinitionContext)_localctx).FS.getLine(), ((FunctionDefinitionContext)_localctx).FS.getCharPositionInLine()+1,(((FunctionDefinitionContext)_localctx).IDL!=null?((FunctionDefinitionContext)_localctx).IDL.getText():null), ((FunctionDefinitionContext)_localctx).tl.ast));
					}
					}
					setState(69);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(72);
			match(T__6);
			setState(73);
			match(T__2);
			setState(79);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__11:
			case T__13:
			case T__14:
			case T__15:
				{
				{
				setState(74);
				((FunctionDefinitionContext)_localctx).rType = type();
				((FunctionDefinitionContext)_localctx).returnType =  ((FunctionDefinitionContext)_localctx).rType.ast;
				}
				}
				break;
			case T__7:
				{
				setState(77);
				match(T__7);
				((FunctionDefinitionContext)_localctx).returnType =  VoidType.getInstance();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(81);
			match(T__8);
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(82);
				((FunctionDefinitionContext)_localctx).variableDefinition = variableDefinition();
				 _localctx.funcBody.addAll(((FunctionDefinitionContext)_localctx).variableDefinition.ast);
				}
				}
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 32985767084096L) != 0)) {
				{
				{
				setState(90);
				((FunctionDefinitionContext)_localctx).statement = statement();
				 _localctx.funcBody.addAll(((FunctionDefinitionContext)_localctx).statement.ast); 
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(98);
			match(T__9);
			 ((FunctionDefinitionContext)_localctx).ast =  new FunctionDefinition(((FunctionDefinitionContext)_localctx).FS.getLine(), ((FunctionDefinitionContext)_localctx).FS.getCharPositionInLine()+1, (((FunctionDefinitionContext)_localctx).FUNCNAME!=null?((FunctionDefinitionContext)_localctx).FUNCNAME.getText():null), new FunctionType(_localctx.returnType, _localctx.params ), _localctx.funcBody); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainFunctionContext extends ParserRuleContext {
		public FunctionDefinition ast;
		public List<VariableDefinition> params = new ArrayList<VariableDefinition>();
		public List<Statement> funcBody = new ArrayList<Statement>();
		public Token FS;
		public Token FUNCNAME;
		public VariableDefinitionContext variableDefinition;
		public StatementContext statement;
		public List<VariableDefinitionContext> variableDefinition() {
			return getRuleContexts(VariableDefinitionContext.class);
		}
		public VariableDefinitionContext variableDefinition(int i) {
			return getRuleContext(VariableDefinitionContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public MainFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainFunction; }
	}

	public final MainFunctionContext mainFunction() throws RecognitionException {
		MainFunctionContext _localctx = new MainFunctionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_mainFunction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			((MainFunctionContext)_localctx).FS = match(T__4);
			setState(102);
			((MainFunctionContext)_localctx).FUNCNAME = match(T__10);
			setState(103);
			match(T__5);
			setState(104);
			match(T__6);
			setState(105);
			match(T__2);
			setState(106);
			match(T__7);
			setState(107);
			match(T__8);
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(108);
				((MainFunctionContext)_localctx).variableDefinition = variableDefinition();
				 _localctx.funcBody.addAll(((MainFunctionContext)_localctx).variableDefinition.ast);
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 32985767084096L) != 0)) {
				{
				{
				setState(116);
				((MainFunctionContext)_localctx).statement = statement();
				 _localctx.funcBody.addAll(((MainFunctionContext)_localctx).statement.ast); 
				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(124);
			match(T__9);
			 ((MainFunctionContext)_localctx).ast =  new FunctionDefinition(((MainFunctionContext)_localctx).FS.getLine(), ((MainFunctionContext)_localctx).FS.getCharPositionInLine()+1, (((MainFunctionContext)_localctx).FUNCNAME!=null?((MainFunctionContext)_localctx).FUNCNAME.getText():null), new FunctionType(VoidType.getInstance(), _localctx.params), _localctx.funcBody); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeContext extends ParserRuleContext {
		public Type ast;
		public List<VariableDefinition> records = new ArrayList<VariableDefinition>();
		public SimpleTypeContext simpleType;
		public Token INT;
		public TypeContext type;
		public VariableDefinitionContext vd;
		public SimpleTypeContext simpleType() {
			return getRuleContext(SimpleTypeContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode INT_CONSTANT() { return getToken(TSmmParser.INT_CONSTANT, 0); }
		public List<VariableDefinitionContext> variableDefinition() {
			return getRuleContexts(VariableDefinitionContext.class);
		}
		public VariableDefinitionContext variableDefinition(int i) {
			return getRuleContext(VariableDefinitionContext.class,i);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_type);
		int _la;
		try {
			setState(147);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(127);
				((TypeContext)_localctx).simpleType = simpleType();
				 ((TypeContext)_localctx).ast =  ((TypeContext)_localctx).simpleType.ast; 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(130);
				match(T__11);
				setState(131);
				((TypeContext)_localctx).INT = match(INT_CONSTANT);
				setState(132);
				match(T__12);
				setState(133);
				((TypeContext)_localctx).type = type();
				 ((TypeContext)_localctx).ast =  new ArrayType(LexerHelper.lexemeToInt((((TypeContext)_localctx).INT!=null?((TypeContext)_localctx).INT.getText():null)), ((TypeContext)_localctx).type.ast); 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(136);
				match(T__11);
				setState(140); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(137);
					((TypeContext)_localctx).vd = variableDefinition();
					_localctx.records.addAll(((TypeContext)_localctx).vd.ast);
					}
					}
					setState(142); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__0 );
				setState(144);
				match(T__12);
				 ((TypeContext)_localctx).ast =  new RecordType(_localctx.records); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SimpleTypeContext extends ParserRuleContext {
		public Type ast;
		public SimpleTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleType; }
	}

	public final SimpleTypeContext simpleType() throws RecognitionException {
		SimpleTypeContext _localctx = new SimpleTypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_simpleType);
		try {
			setState(155);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__13:
				enterOuterAlt(_localctx, 1);
				{
				setState(149);
				match(T__13);
				 ((SimpleTypeContext)_localctx).ast =  IntType.getInstance(); 
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 2);
				{
				setState(151);
				match(T__14);
				 ((SimpleTypeContext)_localctx).ast =  NumberType.getInstance(); 
				}
				break;
			case T__15:
				enterOuterAlt(_localctx, 3);
				{
				setState(153);
				match(T__15);
				 ((SimpleTypeContext)_localctx).ast =  CharType.getInstance(); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public List<Statement> ast = new ArrayList<Statement>();
		public List<Statement> else_ = new ArrayList<Statement>();
		public Token FS;
		public ExpressionContext e1;
		public ExpressionContext el;
		public ExpressionContext expression;
		public BodyContext thenPart;
		public BodyContext elsePart;
		public BodyContext body;
		public InvocationContext invocation;
		public ExpressionContext e2;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<BodyContext> body() {
			return getRuleContexts(BodyContext.class);
		}
		public BodyContext body(int i) {
			return getRuleContext(BodyContext.class,i);
		}
		public InvocationContext invocation() {
			return getRuleContext(InvocationContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}
